--- a/adventofVue/day12/package.json
+++ b/adventofVue/day12/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "vue": "^3.2.37"
   },
   "devDependencies": {
